[gd_scene load_steps=7 format=3 uid="uid://bjy4paq57yu28"]

[ext_resource type="PackedScene" uid="uid://dft0qyjphj10t" path="res://EnvironmentBlocks/basic_block.tscn" id="1_82yl0"]
[ext_resource type="PackedScene" uid="uid://8pmbbcxv8ns0" path="res://Basic Character Setup/characterStartingPoint01001RS.tscn" id="2_lgy8v"]
[ext_resource type="Script" path="res://Scripts/player01.gd" id="3_dmxsu"]
[ext_resource type="Script" path="res://Scripts/Destination-Setter.gd" id="4_fe502"]
[ext_resource type="Script" path="res://Scripts/courtier.gd" id="5_vwgvs"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7c08l"]
size = Vector3(17.1274, 1, 1)

[node name="Main" type="Node3D"]

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" parent="Environment" instance=ExtResource("1_82yl0")]
transform = Transform3D(32, 0, 0, 0, 0.25, 0, 0, 0, 32, 0, 0, 0)

[node name="WallXMinus" parent="Environment" instance=ExtResource("1_82yl0")]
transform = Transform3D(1, 0, 0, 0, 6, 0, 0, 0, 32, -9, 3, 0)

[node name="WallZMinus" parent="Environment" instance=ExtResource("1_82yl0")]
transform = Transform3D(32, 0, 0, 0, 6, 0, 0, 0, 1, 0, 3, -9)

[node name="WallXPlus" parent="Environment" instance=ExtResource("1_82yl0")]
transform = Transform3D(1, 0, 0, 0, 6, 0, 0, 0, 32, 9, 3, 0)

[node name="Throne" parent="Environment" instance=ExtResource("1_82yl0")]
transform = Transform3D(2.83, 0, 0, 0, 1.415, 0, 0, 0, 2.83, 0, 0.331308, -6.70065)

[node name="ThroneBack" parent="Environment/Throne" instance=ExtResource("1_82yl0")]
transform = Transform3D(0.75, 0, 0, 0, 2, 0, 0, 0, 0.25, 0, 1.5, -0.271135)

[node name="HumanSizeReference" parent="Environment" instance=ExtResource("1_82yl0")]
transform = Transform3D(0.64, 0, 0, 0, 1.76, 0, 0, 0, 0.32, 12, 1, 0)
visible = false

[node name="StaticBody3D" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 6, 0, 0, 0, 1, 0, 3, 0)
shape = SubResource("BoxShape3D_7c08l")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 8.78, 4.5)

[node name="Player01" parent="." instance=ExtResource("2_lgy8v")]
script = ExtResource("3_dmxsu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.700125, -0.641577, -0.313376, 0, -0.438889, 0.898541, -0.714021, -0.629091, -0.307277, 0, 0, 0)
shadow_enabled = true

[node name="Destination-Setter" type="Node3D" parent="." groups=["Destination-Setter"]]
script = ExtResource("4_fe502")

[node name="MinZ" type="Node3D" parent="Destination-Setter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="MaxZ" type="Node3D" parent="Destination-Setter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[node name="MinX" type="Node3D" parent="Destination-Setter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="MaxX" type="Node3D" parent="Destination-Setter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Courtier01" parent="." instance=ExtResource("2_lgy8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4246, 0, 1.51083)
script = ExtResource("5_vwgvs")

[node name="Courtier02" parent="." instance=ExtResource("2_lgy8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4246, 0, 1.51083)
script = ExtResource("5_vwgvs")

[node name="Courtier03" parent="." instance=ExtResource("2_lgy8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4246, 0, 1.51083)
script = ExtResource("5_vwgvs")

[node name="Courtier04" parent="." instance=ExtResource("2_lgy8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4246, 0, 1.51083)
script = ExtResource("5_vwgvs")

[node name="Courtier05" parent="." instance=ExtResource("2_lgy8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4246, 0, 1.51083)
script = ExtResource("5_vwgvs")

[node name="Courtier06" parent="." instance=ExtResource("2_lgy8v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4246, 0, 1.51083)
script = ExtResource("5_vwgvs")
